@@ -89,6 +89,8 @@ $(BIN):	romfs_testdir.h $(OBJS)
 
 .built: $(BIN)
 
+context:
+
 .depend: Makefile $(SRCS)
 	@$(MKDEP) $(ROOTDEPPATH) $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
 	@touch $@
