@@ -73,12 +73,13 @@ $(BIN):	$(OBJS)
 
 .built: $(BIN)
 
+context:
+
 .depend: Makefile $(SRCS)
 	@$(MKDEP) $(ROOTDEPPATH) $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
 	@touch $@
 
-# Register application
-depend: .depend
+epend: .depend
 
 clean:
 	@rm -f *.o *~ .*.swp .built
