@@ -74,11 +74,12 @@ $(BIN):	$(OBJS)
 
 .built: $(BIN)
 
+context:
+
 .depend: Makefile $(SRCS)
 	@$(MKDEP) $(ROOTDEPPATH) $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
 	@touch $@
 
-# Register application
 depend: .depend
 
 clean:
