@@ -103,13 +103,14 @@ $(BIN):	$(OBJS)
 	
 .built: $(BIN)
 
+context:
+
 .depend: Makefile $(SRCS)
 ifneq ($(SRCS),)
 	@$(MKDEP) $(ROOTDEPPATH) $(CC) -- $(CFLAGS) -- $(SRCS) >Make.dep
 endif
 	@touch $@
 
-# Register application
 depend: .depend
 
 clean:
