@@ -2,7 +2,7 @@
  * arch/arm/src/lpc17/lpc17_irq.c
  * arch/arm/src/chip/lpc17_irq.c
  *
- *   Copyright (C) 2010 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2010-2011 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
